[project]
name = "parts"
version = "1.6.0"
description = """\
    Minimal library that enables partitioning \
    of iterable objects in a concise manner.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/lapets/parts"
Documentation = "https://parts.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=4.2.0",
    "sphinx-rtd-theme~=1.0.0",
    "sphinx-autodoc-typehints~=1.12.0"
]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.0"
]
lint = [
    "pylint~=2.17.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools~=67.6"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=parts --cov-report term-missing"
