[project]
name = "parts"
version = "2.0.0"
description = """\
    Minimal library that enables partitioning \
    of iterable objects in a concise manner.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/lapets/parts"
Documentation = "https://parts.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=5.0",
    "sphinx-rtd-theme~=2.0.0",
    "sphinx-autodoc-typehints~=1.23.0"
]
test = [
    "pytest~=7.4; python_version < '3.12'",
    "pytest~=8.2; python_version >= '3.12'",
    "pytest-cov~=4.1; python_version < '3.12'",
    "pytest-cov~=5.0; python_version >= '3.12'",
]
lint = [
    "pylint~=2.17.0; python_version < '3.12'",
    "pylint~=3.2.0; python_version >= '3.12'"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=parts --cov-report term-missing"
